# conveyer-belt-cv

./: README.md
conveyer-belt-cv-package/: CMakeLists.txt  package.xml
conveyer-belt-cv-package/data/: README.dataset.txt  README.roboflow.txt  object_info.csv
conveyer-belt-cv-package/data/labels/: train.cache  val.cache
conveyer-belt-cv-package/data_old/labels/: example.txt
conveyer-belt-cv-package/launch/: generate_training_images.launch  myfile.launch  project.launch  simulation.launch
conveyer-belt-cv-package/maps/: 10by10_maze.world_1.xml
conveyer-belt-cv-package/models/: finetuned_yolo11n-obb.pt  finetuned_yolo8obb_v2.pt  yolo11s-obb.pt
conveyer-belt-cv-package/models/box/: model.sdf
conveyer-belt-cv-package/models/camera/: model.urdf
conveyer-belt-cv-package/scripts/: collect_camera_images.py  controller.py  spawn_test_object_in_origin.py
conveyer-belt-cv-package/src/: conveyor_belt_plugin.cpp  data.yaml  inference.py  inference_yolo11n.py  inference_yolo11obb.py  train.py  train_yolov8_obb.py  yolov8_obb.yaml
runs/detect/custom_yolo_model/: args.yaml  (+1 more)
simulation/: CMakeLists.txt  package.xml
simulation/launch/: generate_training_images.launch  load_ur5.launch  simulation.launch  ur5_spawn.launch
simulation/launch/launch/inc/: load_ur.launch.xml  ur_control.launch.xml
simulation/models/box/: model.config
simulation/models/camera/: model.config  model.sdf
simulation/models/conveyor_belt/: model.sdf
simulation/models/robot/: ur5.xacro  ur5_macro.xacro  ur5_robot.urdf
simulation/models/small_blue_cube/: model.config  model.sdf
simulation/models/small_red_cylinder/: model.config  model.sdf
simulation/models/table/: model.config  model.sdf
simulation/scripts/: collect_camera_images.py  conveyor_belt_controller.py  generate_training_data.py  move_ur5.py  spawn_objects.py  spawn_test_object_in_origin.py
simulation/src/: conveyor_belt_plugin.cpp
ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_moveit_config/config/: fake_controllers.yaml  gazebo_ur5.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur5.srdf
ur5_moveit_config/launch/: demo.launch  gazebo.launch  ros_controllers.launch
ur5_moveit_config/scripts/: add_collision_objects.py  move_robot_to_object.py  move_ur5_with_moveit.py  pick_objects.py  test_gripper.py
ur5_moveit_config/src/: ur5_pick_place.cpp
(+494 files in other folders)
